--- a/backend/templates/authentication/login.html
+++ b/backend/templates/authentication/login.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+{% load static %}
 <style>
 .form-container{
  background: #ecf0f3;
@@ -106,6 +106,31 @@
  </div>
  </div>
 
+
+
+{#<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>#}
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+
+{#<div id="app">#}
+{#  ffd {{ message }}#}
+{#</div>#}
+<script>
+var app = new Vue({
+  el: '#app',
+  data: {
+    message: 'Hello Vue!'
+  }
+});
+{#alert('Hessage');#}
+</script>
+    <div id="app">
+      xx  {{ message }}
+    </div>
+
+{#<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>#}
+
+
+<script src="{% static 'js/data.js'%}?{{ now }}"></script>
 </div>
-<script src="https://unpkg.com/vue@3"></script>
-<script src="https://unpkg.com/vue-router@4"></script>
+{#<script src="https://unpkg.com/vue@3"></script>#}
+{#<script src="https://unpkg.com/vue-router@4"></script>#}
