save token in session storage

--- a/backend/templates/authentication/login.html
+++ b/backend/templates/authentication/login.html
@@ -15,7 +15,7 @@
  <div class="form-container" >
  <div class="form-icon"><i class="fa fa-user"></i></div>
  <h3 class="title">Login</h3>
- <form class="form-horizontal" @submit="login()" id="app">
+ <form class="form-horizontal" @submit="login()" id="app" action="./test.html">
      <div class="form-group">
      <label>login</label>
      <input class="form-control" type="text" placeholder="username" name="username" v-model="username">
