it is code with crutches, but i change field user user.id to user.username, post request with it

--- a/backend/templates/authentication/fight.html
+++ b/backend/templates/authentication/fight.html
@@ -36,6 +36,6 @@
 </form>
 <br>
 <input id='push' type="button" onclick="foo()" value="fight!">
-<script src="data.js"></script>
+<script src="fight.js"></script>
 </body>
 </html>
