I will change provide

--- a/backend/templates/authentication/fight.html
+++ b/backend/templates/authentication/fight.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="./figth.css">
 <img src="./chelovek2.png" alt="chelovek" id="chel1">
 <img src="./chelovek2.png" alt="chelovek" id="chel2">
+
 <form class="form">
     <p>Выберите 3 элемента для защиты</p>
    <select id="select1" multiple size="6" name="component-select">
@@ -36,6 +37,9 @@
 </form>
 <br>
 <input id='push' type="button" onclick="foo()" value="fight!">
+<div id="app-1">
+    <span v-if="authenticate()">Hello</span>
+</div>
 <script src="fight.js"></script>
 </body>
 </html>
