--- a/backend/templates/authentication/login.css
+++ b/backend/templates/authentication/login.css
@@ -69,7 +69,7 @@
  width: 100%;
  padding: 12px 15px 11px;
  border-radius: 20px;
- box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px #fff;
+ box-shadow: 6px 6px 6px #383b42, -6px -6px 6px #fff;
  border: none;
  transition: all 0.5s ease 0s;
 }
