change alert and permission users for response data for fight

--- a/backend/templates/authentication/fight.html
+++ b/backend/templates/authentication/fight.html
@@ -9,7 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <link rel="stylesheet" href="./figth.css">
 
-
+<h3><a href="./login.html">Log in</a></h3>
 <div id="app-11" v-if="authenticate">
 <img src="./chelovek2.png" alt="chelovek" id="chel1">
 <img src="./chelovek2.png" alt="chelovek" id="chel2">
