add link statistic

--- a/backend/templates/authentication/fight.html
+++ b/backend/templates/authentication/fight.html
@@ -40,6 +40,7 @@
 <br>
     <input id='push' type="button" onclick="foo()" value="fight!">
 </div>
+<h3><a href="./statistic.html">Statistic</a></h3>
 <script src="fight.js"></script>
 </body>
 </html>
