vue local with npm start is work correctly

--- a/backend/templates/authentication/statistic.html
+++ b/backend/templates/authentication/statistic.html
@@ -10,7 +10,7 @@
 
 <div id="app">
     <div v-if="rounds === null">
-        You must <a href="./login.html">log in</a>
+        You must <a href="../../vue/src/index.html">log in</a>
     </div>
   <ol>
     <li v-for="round in rounds" style="text-align: center">
